Fix footer, now sticky to the bottm of the page and fix overlaping divs

--- a/app/assets/stylesheets/pages/_newcredit.scss
+++ b/app/assets/stylesheets/pages/_newcredit.scss
@@ -1,3 +1,7 @@
+.wrapper {
+  height: calc(100vh - 137px);
+}
+
 .stripe-button {
   padding: 45px;
   background-color: #04D8A7;
